--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 html,
 body,
@@ -7,7 +8,8 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: 'Source Sans Pro', sans-serif;
+  /* font-family: 'Source Sans Pro', sans-serif; */
+  font-family: 'Poppins', sans-serif;
 }
 
 .app {
@@ -16,7 +18,7 @@ body,
 }
 
 ::-webkit-scrollbar{
-  width: 10px;
+  width: 7px;
 }
 
 /* Track */
